# pyderman

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  azure-pipelines.yml  setup.cfg  setup.py  test_pyderman.py
.github/: CODEOWNERS
.github/workflows/: lint.yml  python-publish.yml  pythonpackage.yml  test-macOS-sur.yml  test-macOS.yml  test-ubuntu.yml  test-windows.yml
chromedriver_install/: __init__.py  chrome.py  firefox.py  main.py  test.py
pyderman/: __init__.py  chrome.py  downloader.py  firefox.py  test.py
pyderman/drivers/: __init__.py  chrome.py  edge.py  firefox.py  opera.py  phantomjs.py
pyderman/util/: const.py  downloader.py  github.py
