[metadata]
name = pyderman
version = attr: ccdl.__version__
description = Installs the latest Chrome/Firefox/Opera/PhantomJS/Edge web drivers automatically.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = ShadowMoose
author_email = shadowmoose@github.com
url = https://github.com/shadowmoose/pyderman
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: MIT
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
packages_data =
    pyderman = py.typed
python_requires = >= 3.5

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    setuptools>=46.4.0
    twine
    wheel

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore =
    E741  # ambiguous variable name 'l'

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
