[metadata]
name = pyderman
version = INJECTED_PYDERMAN_VERSION
description = Installs the latest Chrome/Firefox/Opera/PhantomJS/Edge web drivers automatically.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shadowmoose/pyderman
author = ShadowMoose
author_email = shadowmoose@github.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pre-commit
    setuptools>=46.4.0
    twine
    types-setuptools
    wheel

[options.package_data]
pyderman = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore =
    E741  # ambiguous variable name 'l'

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
